# mqtt_esp

./: .dir-locals.el  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  Makefile  README.md  TODO  deploy_firmware.sh  flash.bat  partitions.csv  sdkconfig.old
components/bme280/driver/: bme280.c  bme280.h
components/dht/: CMakeLists.txt  dht.c
components/mqtt/: component.mk
main/: CMakeLists.txt  Kconfig.projbuild  MQTTEcho.c  app_actuator.c  app_actuator.h  app_at.c  app_at.h  app_bh1750.c  app_bh1750.h  app_bme280.c  app_bme280.h  app_coap.h  app_coap_client.c  app_coap_client.h  app_coap_server.c  app_coap_server.h  app_contact.c  app_contact.h  app_esp8266.h  app_handle_cmd.c  app_handle_cmd.h  app_http_server.c  app_http_server.h  app_i2c.c  app_i2c.h  app_logging.c  app_logging.h  app_main.c  app_main.h  app_motion.c  app_motion.h  app_mqtt.c  app_mqtt.h  app_north_udp_client.c  app_north_udp_server.c  app_nvs.c  app_nvs.h  app_ops.c  app_ops.h  app_ota.c  (+73 more)
main/http/: index.css  index.html  index.js
test-host/: .dir-locals.el  Makefile  catch.hpp  esp_log.c  esp_log.h  esp_system.h  esp_wifi.h  hippomocks.h  mock.c  mqtt_client.h  stub.c  test_app_mqtt.cc  test_app_thermostat.cc
test-host/freertos/: FreeRTOS.h  event_groups.h  queue.h  semphr.h
