idf_component_register(SRCS app_actuator.c
                  app_bh1750.c
                  app_bme280.c
                  app_coap_client.c
                  app_coap_server.c
                  app_http_server.c
                  app_i2c.c
                  app_main.c
                  app_motion.c
                  app_mqtt.c
                  app_nvs.c
                  app_ops.c
                  app_ota_esp32.c
                  app_ota_esp8266.c
                  app_presence.c
                  app_publish_data.c
                  app_relay.c
                  app_scheduler.c
                  app_sensors.c
                  app_smart_config_esp32.c
                  app_smart_config_esp8266.c
                  app_switch.c
                  app_system.c
                  app_thermostat.c
                  app_waterpump.c
                  app_wifi_esp32.c
                  app_wifi_esp8266.c
                    INCLUDE_DIRS "")

